--- a/profile/template/installer/overlay/etc/calamares/modules/displaymanager.conf
+++ b/profile/template/installer/overlay/etc/calamares/modules/displaymanager.conf
@@ -14,9 +14,9 @@ displaymanagers:
   - kdm
 
 #Enable the following settings to force a desktop environment in your displaymanager configuration file:
-#defaultDesktopEnvironment:
-#    executable: "startkde"
-#    desktopFile: "plasma"
+defaultDesktopEnvironment:
+    executable: "xfce"
+    desktopFile: "startxfce4"
 
 #If true, try to ensure that the user, group, /var directory etc. for the
 #display manager are set up correctly. This is normally done by the distribution
